@@ -18,12 +18,11 @@ public class AdminCompleter implements TabCompleter {
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, String[] args) {
 
         if (args.length <= 1) {
-            List<String> allCompletions = new ArrayList<>(Arrays.asList("reload", "reset", "reroll", "add", "show", "complete", "help", "holo", "convert"));
-            List<String> completions = new ArrayList<>();
+            final List<String> allCompletions = new ArrayList<>(Arrays.asList("reload", "reset", "reroll", "add", "show", "complete", "help", "holo", "convert"));
+            final List<String> completions = new ArrayList<>();
 
             StringUtil.copyPartialMatches(args[0], allCompletions, completions);
             Collections.sort(completions);
-
             return completions;
         } else if (args.length == 2) {
             final List<String> allCompletions;
@@ -34,33 +33,34 @@ public class AdminCompleter implements TabCompleter {
                 case "reset" -> allCompletions = new ArrayList<>(List.of("quests", "total"));
                 case "add" -> allCompletions = new ArrayList<>(List.of("total"));
                 case "convert" -> allCompletions = new ArrayList<>(List.of("mysql", "h2"));
-                case "reroll" -> {
-                    allCompletions = new ArrayList<>();
-                    for (int i = 1; i <= QuestsAmount.getQuestsAmount(); i++) {
-                        allCompletions.add(String.valueOf(i));
-                    }
+                default -> {
+                    return null;
                 }
-                default -> allCompletions = new ArrayList<>();
             }
 
             StringUtil.copyPartialMatches(args[1], allCompletions, completions);
             Collections.sort(completions);
             return completions;
-        } else if (args.length == 3 && args[0].equalsIgnoreCase("holo") && args[1].equalsIgnoreCase("create")) {
-            final List<String> allCompletions = new ArrayList<>(Arrays.asList("global", "easy", "medium", "hard"));
+        } else if (args.length == 3) {
+            final List<String> allCompletions = new ArrayList<>();
             final List<String> completions = new ArrayList<>();
 
-            StringUtil.copyPartialMatches(args[2], allCompletions, completions);
-            Collections.sort(completions);
-            return completions;
-        } else if (args.length == 3 && args[0].equalsIgnoreCase("convert")) {
-            List<String> allCompletions = new ArrayList<>(Arrays.asList("mysql", "h2"));
-            List<String> completions = new ArrayList<>();
+            if (args[0].equalsIgnoreCase("holo") && args[1].equalsIgnoreCase("create")) {
+                allCompletions.addAll(List.of("global", "easy", "medium", "hard"));
+            } else if (args[0].equalsIgnoreCase("convert")) {
+                allCompletions.addAll(List.of("mysql", "h2"));
+            } else if (args[0].equalsIgnoreCase("reroll") || args[0].equalsIgnoreCase("complete")) {
+                for (int i = 1; i <= QuestsAmount.getQuestsAmount(); i++) {
+                    allCompletions.add(String.valueOf(i));
+                }
+            }
 
             StringUtil.copyPartialMatches(args[2], allCompletions, completions);
             Collections.sort(completions);
             return completions;
         }
+
         return null;
     }
 }
+
